light theme v0.1 - final fixes - should be somewhat usable on smaller screens at this point

--- a/src/main/resources/static/themes/light/styles.css
+++ b/src/main/resources/static/themes/light/styles.css
@@ -25,6 +25,16 @@ h2 {
   color: black;
 }
 
+@media only screen and (max-width: 1400px) {
+  h2 {
+    font-size: 30px;
+  }
+
+  #about-text-container b {
+    font-size: 24px;
+  }
+}
+
 a {
   color: rgb(128, 128, 192);
 }
